--- a/user-service/docker-compose.yml
+++ b/user-service/docker-compose.yml
@@ -1,7 +1,7 @@
  version: '3.1'
  services:
-   mycassandra1:
+   mycassandra:
      image: cassandra
-     container_name: mycassandra1
+     container_name: mycassandra
      ports:
        - "9042:9042"
