Locally tested email notification service

--- a/email-notification-service/src/main/resources/application.properties
+++ b/email-notification-service/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.kafka.bootstrap-servers=localhost:9092
+server.port=8089
+
+#The Default Gmail SMTP Settings
+#You can connect to Gmail mail servers using SMTP, SSL/TLS
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=stackunderflow2@gmail.com
+spring.mail.password=zvndbmkrekqreivs
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
