--- a/Auth-Service/pom.xml
+++ b/Auth-Service/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.SWAFinalProject</groupId>
 	<artifactId>Auth-Service</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>Auth-Service</name>
 	<description>authentication service</description>
 	<properties>
