--- a/ansewer-service/src/main/resources/application.yml
+++ b/ansewer-service/src/main/resources/application.yml
@@ -7,4 +7,6 @@ spring:
       contact-points: mycassandra
       keyspace-name: mykeyspace
       entity-base-package: com.finalproject.ansewerservice.model
-      schema-action: recreate
+      schema-action: create_if_not_exists
+server:
+  port: 8081
