update and delete authorized

--- a/user-service/src/main/java/com/SWAFinalProject/userservice/k8/user-service.yml
+++ b/user-service/src/main/java/com/SWAFinalProject/userservice/k8/user-service.yml
@@ -27,9 +27,9 @@ metadata:
 spec:
   selector:
     app: user-service-deployment
-#  type: ClusterIp
-  ports:
-      port: 80
+   type: ClusterIp
+   ports:
+      port: 9002
       targetPort: 9002
 
 
