--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   kafka:
-#    bootstrap-servers: host.docker.internal
-    bootstrap-servers: host.docker.internal:9093
+    bootstrap-servers: localhost:9092
+#    bootstrap-servers: host.docker.internal:9093
   data:
     cassandra:
       port: 9042
