--- a/user-service/src/main/java/com/SWAFinalProject/userservice/k8/user-service.yml
+++ b/user-service/src/main/java/com/SWAFinalProject/userservice/k8/user-service.yml
@@ -1,36 +1,19 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: user-service-deployment
-  labels:
-    app: user-service-deployment
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: user-service-deployment
-  template:
-    metadata:
-      labels:
-        app: user-service-deployment
-    spec:
-      containers:
-        - name: user-service-deployment
-          image: 212729/user-service-image:latest
-          ports:
-            - containerPort: 9002
----
 apiVersion: v1
 kind: Service
 metadata:
-  name: user-service-service
+  name: user-service
+  labels:
+    name: user-service
+    app: user-service
 spec:
-  selector:
-    app: user-service-deployment
-   type: ClusterIp
-   ports:
-      port: 9002
+  type: loadBalancer
+  ports:
+    - port: 9002
       targetPort: 9002
+  selector:
+    name: user-service-pod
+    app: user-service-pod
+
 
 
 
