--- a/user-service/src/main/java/com/SWAFinalProject/userservice/k8/user-service.yml
+++ b/user-service/src/main/java/com/SWAFinalProject/userservice/k8/user-service.yml
@@ -6,7 +6,7 @@ metadata:
     name: user-service
     app: user-service
 spec:
-  type: loadBalancer
+  type: LoadBalancer
   ports:
   - port: 9002
     targetPort: 9002
