--- a/Questions-service/src/main/resources/application.yml
+++ b/Questions-service/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+app:
+  answer_service: http://localhost:8080/api/v1/answers
+  jwtSecret: very-secret
 spring:
   kafka:
     bootstrap-servers: localhost:9092
@@ -8,8 +11,9 @@ spring:
       keyspace-name: myqkeyspace
       entity-base-package: com.finalproject.questionsservice.Entity
       schema-action: create_if_not_exists
+
 server:
-  port: 8081
+  port: 8089
 
 
 
