--- a/k8s config file/StatefulSet9093.yaml
+++ b/k8s config file/StatefulSet9093.yaml
@@ -27,7 +27,7 @@ spec:
           name: tls-intra-node
         - containerPort: 7199
           name: jmx
-        - containerPort: 9042
+        - containerPort: 9043
           name: cql
         resources:
           limits:
@@ -56,6 +56,8 @@ spec:
             value: "cassandra-0.cassandra.default.svc.cluster.local"
           - name: CASSANDRA_CLUSTER_NAME
             value: "K8Demo"
+          # - name: ENABLE_SASI_INDEXES
+          #   value: "true"
           - name: CASSANDRA_DC
             value: "DC1-K8Demo"
           - name: CASSANDRA_RACK
