--- a/k8s config file/cassandra9043.yml
+++ b/k8s config file/cassandra9043.yml
@@ -1,8 +1,12 @@
- version: '2.5'
- services:
-   mycassandra:
-     image: cassandra
-     container_name: mycassandra
-     ports:
-       - "9043:9043"
-
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    app: cassandra
+  name: cassandra
+spec:
+  clusterIP: None
+  ports:
+  - port: 9043
+  selector:
+    app: cassandra
