--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -1,14 +1,12 @@
 spring:
   kafka:
-#    bootstrap-servers: host.docker.internal
-    bootstrap-servers: host.docker.internal:9093
+    bootstrap-servers: ${KafkaHost}:${KafkaPort}
   data:
     cassandra:
-      port: 9042
-      contact-points: mycassandra
-#      keyspace-name: userKeySpace
-#      entity-base-package: com.SWAFinalProject.userservice.entity
-#      schema-action: create_if_not_exists
+      port: ${DBPort}
+      contact-points: ${DBHost}
+      keyspace-name: userKeySpace
+      schema-action: create_if_not_exists
 server:
   port : 9002
   error:
